# eflete

./: .gitignore  .mailmap  AUTHORS  CMakeCache.txt  CMakeLists.txt  ChangeLog  Makefile.am  Makefile_Eolian_Helper.am  NEWS  NOTES  README  README.md  autogen.sh  configure.ac  eflete_autocompletion.sh  meson.build  meson_options.txt  run  sonar-project.properties
check_utc/edje_compile/: CMakeLists.txt  test_compile.c
data/: CMakeLists.txt  Makefile.am  component_designer.desktop.in  efl_tet.edc  eflete.desktop  eflete.desktop.in  efltet.desktop  macros.edc  meson.build  ui_ruler.edc
data/color/: meson.build
data/fonts/: meson.build
data/images/: meson.build
data/layouts/: eflete.edc  meson.build
data/resources/: resources.edc
data/sounds/: meson.build
data/template/: README  meson.build  template.edc
data/themes/: meson.build
data/widgets/: block.edc  colorclass_viewer.edc  groupspace.edc  images.edc  inwin.edc  main_window.edc  naviframe.edc  prop_item.edc  ruler.edc  textstyle.edc  workspace.edc
po/: ChangeLog  LINGUAS  Makevars  POTFILES.in  ca.po  eflete.pot  eo.po  fr.po  it.po  meson.build  nb_NO.po  potfiles-update.sh  pt.po  ru.po  ta.po  uk.po  uk_UA.po
src/: CMakeLists.txt  Makefile.am  cmakeconfig.h.in  config.h  config.h.in  efl_ete.c  efl_ete.h  efl_tet.c  efl_tet.h  eflete.c  eflete.h  main.c  meson.build
src/alloc/: alloc.c  alloc.h
src/common/: common_define.h  common_macro.h  string_define.h  string_macro.h  widget_define.h  widget_macro.h
src/config/: config.c  config.h  profile.h
src/history/: history.c  history.h  history_attribute.c  history_part.c  history_private.h  history_state.c  history_ui.c
src/lib/: Ewe.h  Makefile.am  ewe_combobox.c  ewe_combobox.eo  ewe_combobox.h  ewe_combobox_common.h  ewe_combobox_eo.h  ewe_combobox_legacy.h  ewe_entry.c  ewe_entry.eo  ewe_entry.h  ewe_entry_common.h  ewe_entry_eo.h  ewe_entry_legacy.h  ewe_main.c  ewe_main.h  ewe_private.h  ewe_ruler.c  ewe_ruler.eo  ewe_ruler.h  ewe_ruler_common.h  ewe_ruler_eo.h  ewe_ruler_legacy.h  ewe_statusbar.c  ewe_statusbar.eo  ewe_statusbar.h  ewe_statusbar_common.h  ewe_statusbar_eo.h  ewe_statusbar_legacy.h  ewe_tabs.c  ewe_tabs.eo  ewe_tabs.h  ewe_tabs_common.h  ewe_tabs_eo.h  ewe_tabs_legacy.h  ewe_widget_combobox.h  ewe_widget_entry.h  ewe_widget_ruler.h  ewe_widget_statusbar.h  ewe_widget_tabs.h  (+6 more)
src/logger/: logger.c  logger.h
src/loop_manager/: loop_manager.c  loop_manager.h
src/project_manager/: edje_compile.c  edje_compile.h  pm.h  project_manager.c  project_manager.h  project_manager_new.c  project_manager_new.h  widget_manager.c  widget_manager.h
src/settings/: settings.c  settings.h
src/ui/: connector.c  cursor.c  cursor.h  main_window.c  main_window.h  menu.c  panes.c  splash.c  ui.c  ui.h  ui_block.c  ui_block.h  ui_blocks_communication.c  ui_connector.c  ui_main_window.c  ui_main_window.h  ui_menu.c  ui_panes.c  ui_property.c  ui_property.h  ui_ruler.c  ui_settings.c  ui_settings.h  ui_signal_list.c  ui_signal_list.h  ui_states_list.c  ui_states_list.h  ui_style_viewer_window.c  ui_style_viewer_window.h  ui_widget_list.c  ui_widget_list.h  ui_workspace.c  ui_workspace.h
tests/: CMakeLists.txt  CMakeListsCommon.inc  Doxyfile  Doxyfile.in  Makefile.am  Makefile.am.old  eflete_check.h  meson.build  test_common.h  tests_report_generator.py  utc.xml  utc_common.h
tests/add_part/: CMakeLists.txt  test_addpart.c
tests/alloc/: CMakeLists.txt  test_alloc.xml
tests/colorclasses_edit_api/: CMakeLists.txt
tests/edj_build/: Makefile.am  license.txt  radio.edc  radio.edc.in
tests/edje_compile/: CMakeLists.txt  test_compile.c
tests/efl_tet/: CMakeLists.txt  test_efltet.c
tests/font_viewer_dialog/: CMakeLists.txt
tests/image_editor/: CMakeLists.txt  test_image_editor.c
tests/logger/: CMakeLists.txt  test_alloc.xml
tests/modal_window/: CMakeLists.txt  test_modal.c  test_modal_window.xml
tests/notify/: CMakeLists.txt
tests/project_manager/: CMakeLists.txt  test_prmanager.c
tests/settings/: CMakeLists.txt  test_settings.c  test_settings.xml
tests/test_about_window/: about_window_add.c  test_about_window.c  test_about_window.h
tests/test_addpart/: test_addpart.c
tests/test_alloc/: mem_calloc.c  mem_malloc.c  meson.build  test_alloc.c  test_alloc.h
tests/test_animator/: animator_window_add_test.c  test_animator.c  test_animator.h
tests/test_change/: change_add.c  change_diff_add.c  change_diff_merge_add.c  change_free.c  meson.build  test_change.c  test_change.h
tests/test_colorclass_editor/: colorclass_viewer_add.c  test_colorclass_editor.c  test_colorclass_editor.h
tests/test_colorclass_manager/: colorclass_manager_add.c  test_colorclass_manager.c  test_colorclass_manager.h
tests/test_colorclasses_edit_api/: test_colorclasses_edit_api.c
tests/test_colorselector/: colorselector_add.c  colorselector_color_get.c  test_colorselector.c  test_colorselector.h
tests/test_compile_dialog/: compile_dialog.c  test_compile_dialog.c  test_compile_dialog.h
tests/test_config/: config_get.c  config_init.c  config_load.c  config_panes_sizes_data_update.c  config_save.c  config_shutdown.c  meson.build  profile_get.c  profile_load.c  profile_save.c  profiles_get.c  test_config.c  test_config.h
tests/test_container/: container_add.c  container_border_hide.c  container_border_show.c  container_confine_set.c  container_confine_unset.c  container_container_size_get.c  container_container_size_set.c  container_content_set.c  container_content_unset.c  container_handler_size_get.c  container_handler_size_set.c  container_max_size_set.c  container_min_size_set.c  container_padding_size_get.c  container_padding_size_set.c  container_style_get.c  container_style_set.c  test_container.c  test_container.h
tests/test_cursor/: cursor_main_get.c  cursor_main_set.c  cursor_style_get.c  cursor_style_set.c  cursor_theme_get.c  cursor_theme_set.c  cursor_type_get.c  cursor_type_set.c  meson.build  test_cursor.c  test_cursor.h
tests/test_diff/: diff_free.c  diff_undo_redo.c  diff_update.c  meson.build  test_diff.c  test_diff.h
(+823 files in other folders)
