cmake_minimum_required(VERSION 2.8)
project(efltet C)

set(VERMAJ 0)
set(VERMIN 0)
set(VERMIC 8)
set(PACKAGE_VERSION ${VERMAJ}.${VERMIN}.${VERMIC})
set(PACKAGE "Theme Editor Tool")

option(debug "debug build" 0)


set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/Modules/")
include_directories(${CMAKE_CURRENT_SOURCE_DIR})

find_package(Eina REQUIRED)
   if(EINA_FOUND)
      set(have_eina "yes")
   else(EINA_FOUND)
      message(FATAL_ERROR "Can not find a Eina library.")
   endif(EINA_FOUND)
find_package(Eet REQUIRED)
   if(EET_FOUND)
      set(have_eet "yes")
   else(EET_FOUND)
      message(FATAL_ERROR "Can not find a Eet library.")
   endif(EET_FOUND)
find_package(Evas REQUIRED)
   if(EVAS_FOUND)
      set(have_evas "yes")
   else(EVAS_FOUND)
      message(FATAL_ERROR "Can not find a Evas library.")
   endif(EVAS_FOUND)
find_package(Ecore REQUIRED)
   if(ECORE_FOUND)
      set(have_ecore "yes")
   else(ECORE_FOUND)
      message(FATAL_ERROR "Can not find a Ecore library.")
   endif(ECORE_FOUND)
find_package(Ecore COMPONENTS Ecore-x)
   if(ECORE_X_FOUND)
      set(have_ecore_x "yes")
   else(ECORE_X_FOUND)
      message(FATAL_ERROR "Can not find a Ecore library component - Ecore_X.")
   endif(ECORE_X_FOUND)
find_package(Ecore COMPONENTS Ecore-Evas)
   if(ECORE_EVAS_FOUND)
      set(have_ecore_evas "yes")
   else(ECORE_EVAS_FOUND)
      message(FATAL_ERROR "Can not find a Ecore library component - Ecore_Evas.")
   endif(ECORE_EVAS_FOUND)
find_package(Eio REQUIRED)
   if(EIO_FOUND)
      set(have_eio "yes")
   else(EIO_FOUND)
      message(FATAL_ERROR "Can not find a Eio library.")
   endif(EIO_FOUND)
find_package(Edje REQUIRED)
   if(EDJE_FOUND)
      set(have_edje "yes")
   else(EDJE_FOUND)
      message(FATAL_ERROR "Can not find a Edje library.")
   endif(EDJE_FOUND)
find_package(Efreet REQUIRED)
   if(EFREET_FOUND)
      set(have_efreet "yes")
   else(EFREET_FOUND)
      message(FATAL_ERROR "Can not find a Efreet library.")
   endif(EFREET_FOUND)
find_package(Elementary REQUIRED)
   if(ELEMENTARY_FOUND)
      set(have_elementary "yes")
   else(ELEMENATRY_FOUND)
      message(FATAL_ERROR "Can not find a Elementary library.")
   endif(ELEMENTARY_FOUND)
find_package(Doxygen)
   if(DOXYGEN_FOUND)
      set(build_doc "yes")
   else(DOXYGEN_FOUND)
      set(build_doc "no")
   endif(DOXYGEN_FOUND)

set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -g -Wall -Wextra -Werror -O2")
#set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -g -Wall -Wextra -O2")

# target 'clear'
IF("${CMAKE_GENERATOR}" MATCHES "Make")
   ADD_CUSTOM_TARGET(fsm_clean
      COMMAND ${CMAKE_MAKE_PROGRAM} clean
      WORKING_DIRECTORY ${CMAKE_CURRENT_DIR}
      )
   ADD_DEPENDENCIES(fsm_clean FsmCompilerClean)
ENDIF("${CMAKE_GENERATOR}" MATCHES "Make")

include_directories(
   ${EINA_INCLUDE_DIRS}
   ${ECORE_INCLUDE_DIRS}
   ${EVAS_INCLUDE_DIRS}
   ${EET_INCLUDE_DIRS}
   ${EIO_INCLUDE_DIRS}
   ${EDJE_INCLUDE_DIRS}
   ${EFREET_INCLUDE_DIRS}
   ${ELEMENTARY_INCLUDE_DIRS}
   )


if (prefix)
   set(CMAKE_INSTALL_PREFIX ${prefix})
else()
   set(prefix ${CMAKE_INSTALL_PREFIX})
endif()

if (NOT ${debug})
   set(BIN_PATH ${CMAKE_INSTALL_PREFIX}/bin)
   set(DATA_PATH ${CMAKE_INSTALL_PREFIX}/share/efltet)
   set(DOC_PATH ${CMAKE_INSTALL_PREFIX}/man)
   set(BUILD_TYPE "Release Build")
   set(BUILD_PATH ${CMAKE_INSTALL_PREFIX})
   set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -Wextra -Werror -O2")
else()
   set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/build)
   set(BIN_PATH ${CMAKE_CURRENT_SOURCE_DIR})
   set(DATA_PATH ${CMAKE_CURRENT_SOURCE_DIR}/data)
   set(DOC_PATH ${CMAKE_CURRENT_SOURCE_DIR}/doc)
   set(BUILD_TYPE "Debug Build")
   set(BUILD_PATH ${CMAKE_CURRENT_SOURCE_DIR}/build)
   set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -g -Wall -Wextra -Werror -O2")
endif()

add_definitions("-DPACKAGE=\"${PACKAGE}\"")
file(MAKE_DIRECTORY $ENV{HOME}/.${PROJECT_NAME})
#FIXME: bad define
add_definitions("-DTET_EDJ=\"${DATA_PATH}/themes/default/${PROJECT_NAME}.edj\"")
add_definitions("-DTET_IMG_PATH=\"${DATA_PATH}/images/\"")
add_definitions("-DTET_EDJ_PATH=\"${DATA_PATH}/themes/default/\"")
add_definitions("-DTET_SETT_PATH=\"$ENV{HOME}/.efltet/\"")

add_subdirectory(src)
add_subdirectory(data)
add_subdirectory(doc)
add_subdirectory(tests/edje_compile)
add_subdirectory(tests/project_manager)
add_subdirectory(tests/settings)
add_subdirectory(tests/alloc)
add_subdirectory(tests/widget_manager)
add_subdirectory(tests/logger)
add_subdirectory(tests/efl_tet)
add_subdirectory(tests/ui_block)
add_subdirectory(tests/ui_ruler)
add_subdirectory(tests/colorclasses_edit_api)
add_subdirectory(tests/modal_window)
add_subdirectory(tests/ui_main_window)
add_subdirectory(tests/ui_signal_list)
add_subdirectory(tests/ui_state_list)
add_subdirectory(tests/ui_widget_list)
add_subdirectory(tests/font_viewer_dialog)
add_subdirectory(tests/add_part)

#install
if (NOT ${debug})
   install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/data/images DESTINATION ${DATA_PATH} FILES_MATCHING PATTERN "*.jpg" PATTERN "*.png")
   install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/data/themes/default/${PROJECT_NAME}.edj DESTINATION ${DATA_PATH}/themes/default)
   install(PROGRAMS ${CMAKE_CURRENT_SOURCE_DIR}/build/${PROJECT_NAME} DESTINATION ${BIN_PATH})
else()
   install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/data/images DESTINATION ${CMAKE_CURRENT_SOURCE_DIR}/build/data FILES_MATCHING PATTERN "*.jpg" PATTERN "*.png")
   install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/data/themes/default/${PROJECT_NAME}.edj DESTINATION ${CMAKE_CURRENT_SOURCE_DIR}/build/data/themes/default)
endif()

if (NOT ${debug})
   # Install desctop file
   install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/data/efltet.desktop DESTINATION /usr/local/share/applications)
   # Install icons
   install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/data/images/efltet.svg DESTINATION /usr/local/share/icons)
endif()

configure_file(
    "${CMAKE_CURRENT_SOURCE_DIR}/cmake_uninstall.cmake.in"
    "${CMAKE_CURRENT_BINARY_DIR}/cmake_uninstall.cmake"
    IMMEDIATE @ONLY)
add_custom_target(uninstall
    COMMAND ${CMAKE_COMMAND} -P ${CMAKE_CURRENT_BINARY_DIR}/cmake_uninstall.cmake)

#OUTPUT
message("")
message("")
message("------------------------------------------------------------------------")
message(${PACKAGE} " " ${PACKAGE_VERSION})
message("------------------------------------------------------------------------")
message("")
message("Configuration Options Summary:")
message("")
message("  eina...........: " ${have_eina})
message("  eet............: " ${have_eet})
message("  evas...........: " ${have_evas})
message("  ecore..........: " ${have_ecore})
message("    ecore-x......: " ${have_ecore_x})
message("    ecore-evas...: " ${have_ecore_evas})
message("  eio............: " ${have_eio})
message("  edje...........: " ${have_edje})
message("  efreet.........: " ${have_efreet})
message("  elementary.....: " ${have_elementary})
message("")
message("  Documentation..: " ${build_doc})
message("    Graphviz.....: " ${have_graphviz})
message("    Build doc....: make doc")
message("")
message("Compilation......: make")
message("  CPPFLAGS.......: " ${CMAKE_CXX__FLAGS})
message("  CFLAGS.........: " ${CMAKE_C_FLAGS})
message("  LDFLAGS........: " )
message("")
message("Installation.....: make install (as root if needed, with 'su' or 'sudo')")
message("  type...........: " ${BUILD_TYPE})
if (NOT ${debug})
   message("  prefix.........: " ${prefix})
else()
   message("  path...........: " ${BUILD_PATH})
endif()
message("")
enable_testing()
